; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/tools/bin_to_cso_mp3/extr_bin_to_cso_mp3.c_convert_bin_to_iso.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/tools/bin_to_cso_mp3/extr_bin_to_cso_mp3.c_convert_bin_to_iso.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"failed to open: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"writing iso %s, %x sectors\0A\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"\08\08\08%3i\00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [8 x i8] c"\08\08\08100\0A\00", align 1
@.str.5 = private unnamed_addr constant [3 x i8] c"..\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @convert_bin_to_iso(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca [2352 x i32], align 16
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @chdir(i8* %12)
  %14 = load i8*, i8** %7, align 8
  %15 = call i32* @fopen(i8* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %15, i32** %9, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %4
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  %21 = call i32 @myexit(i32 1)
  br label %22

22:                                               ; preds = %18, %4
  %23 = load i8*, i8** %7, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i8* %23, i32 %24)
  store i32 0, i32* %11, align 4
  br label %26

26:                                               ; preds = %45, %22
  %27 = load i32, i32* %11, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp slt i32 %27, %28
  br i1 %29, label %30, label %48

30:                                               ; preds = %26
  %31 = load i32, i32* %11, align 4
  %32 = mul nsw i32 %31, 100
  %33 = load i32, i32* %8, align 4
  %34 = sdiv i32 %32, %33
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %34)
  %36 = load i32, i32* @stdout, align 4
  %37 = call i32 @fflush(i32 %36)
  %38 = getelementptr inbounds [2352 x i32], [2352 x i32]* %10, i64 0, i64 0
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @fread(i32* %38, i32 2352, i32 1, i32* %39)
  %41 = getelementptr inbounds [2352 x i32], [2352 x i32]* %10, i64 0, i64 0
  %42 = getelementptr inbounds i32, i32* %41, i64 16
  %43 = load i32*, i32** %9, align 8
  %44 = call i32 @fwrite(i32* %42, i32 2048, i32 1, i32* %43)
  br label %45

45:                                               ; preds = %30
  %46 = load i32, i32* %11, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %11, align 4
  br label %26

48:                                               ; preds = %26
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @fclose(i32* %50)
  %52 = call i32 @chdir(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.5, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @chdir(i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @myexit(i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @fread(i32*, i32, i32, i32*) #1

declare dso_local i32 @fwrite(i32*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
